# ztrade

./: .dockerignore  .env.example  .gitignore  CELERY_SETUP.md  CLAUDE.md  Dockerfile  GEMINI.md  MANUAL_MODE.md  MARKET_OPEN_CHECKLIST.md  QUICK_START_MONDAY.md  README.md  SCHEDULING_GUIDE.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  TRADING_MODES_GUIDE.md  celery_app.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_data_status.sh  com.ztrade.marketopen.plist  dashboard.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-control.sh  preflight_check.py  pyproject.toml  requirements.txt  start_trading_at_market_open.sh
.archive/cli-old/: loop_manager.py
.archive/docker-old/: celery_app.py  celery_control.sh  docker-compose.dev.yml  run_dashboard.sh
.claude/personas/: README.md  agent-specialist.md  core-platform-engineer.md  dashboard-developer.md  risk-data-analyst.md
.github/workflows/: ci.yml
agents/_archived/: README.md
agents/agent_aapl/: context.yaml  personality.md
agents/agent_btc/: context.yaml  personality.md
agents/agent_ddog/: context.yaml
agents/agent_doge/: context.yaml
agents/agent_eth/: context.yaml
agents/agent_iwm/: context.yaml  (+1 more)
airflow/: .env.airflow  README.md  docker-compose.airflow.yml  start-airflow.sh
cli/: main.py
config/: broker_config.yaml  company_config.yaml  risk_limits.yaml
db/: backfill_historical_data.py  migrate.py  seed_test_data.py
docs/: DATA_ACCUMULATION_PLAN.md  dag-inventory.md
k8s/: README.md
mcp/: mcp_config.json  tradingview_server.py
tests/: test_algorithmic_decision.py  test_cli.py  test_config.py  test_risk_validator.py
ztrade/: broker.py  market_data.py
(+127 files in other folders)
